# nflfootballproject

./: .gitignore  Doxyfile  README.md  docker-compose.yml  vcpkg.json
.github/workflows/: ci.yml
Backend/: backendManager.cpp  backendManager.h  main.cpp  stadium.cpp  stadium.h
backend/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  backendManager.cpp  backendManager.h  bfs.cpp  bfs.h  hash.h  includes.h  main.cpp  setup.sh  stadium.cpp  stadium.h  vcpkg.json
backend/assets/: database.db  inputStadium.json  schema.sql
backend/assets/csv/: NFL Distances.csv  NFL Information.csv  NFL Souvenirs.csv
backend/build-wsl/: CMakeCache.txt  Makefile  NFLFootballBackend  cmake_install.cmake
backend/database/: NFL Distances.csv  NFL Information.csv  database.db  schema.sql
backend/include/: includes.h
backend/include/database/: databaseManager.h
backend/include/models/: adjacencyList.h  adjacencyMatrix.h  backendManager.h  bfs.h  cart.h  dfs.h  hash.h  stadium.h
backend/include/routes/: routes.h
backend/scripts/: import_csv.py  setup.ps1  setup.sh
backend/src/: main.cpp
backend/src/database/: databaseManager.cpp
backend/src/models/: adjacencyList.cpp  adjacencyMatrix.cpp  backendManager.cpp  bfs.cpp  cart.cpp  dfs.cpp  stadium.cpp
backend/src/routes/: routes.cpp
dev/scripts/: import_csv.py  setup.bat  setup.ps1  setup.sh
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AddTeamForm.jsx  EditTeamForm.jsx  EditTeamSection.jsx  FilterBar.jsx  FiltersPanel.jsx  Layout.jsx  MultiCheckbox.jsx  NavBar.jsx  SearchBar.jsx  SortOptions.jsx  SouvenirCard.jsx  StadiumEditForm.jsx  TeamInfo.jsx
frontend/src/context/: TripProvider.jsx
frontend/src/pages/: admin.jsx  adminDash.jsx  home.jsx  login.jsx  summary.jsx  trip.jsx
frontend/src/styles/: App.css  admin.css  checkbox.css  editTeamForm.css  editTeamSection.css  home.css  index.css  login.css  souvenirCard.css  summary.css  trip.css
html/: adjacencyList_8cpp.html  adjacencyList_8h.html  adjacencyList_8h.js  adjacencyList_8h_source.html  adjacencyMatrix_8h_source.html  annotated.html  annotated_dup.js  backendManager_8h_source.html  cart_8h_source.html  classAdjacencyList-members.html  classAdjacencyList.html  classAdjacencyMatrix-members.html  classAdjacencyMatrix.html  classBackendManager-members.html  classBackendManager.html  classCart-members.html  classCart.html  classDatabaseManager-members.html  classDatabaseManager.html  classDoubleHashTable-members.html  classDoubleHashTable.html  classStadium-members.html  classStadium.html  classes.html  databaseManager_8h.html  databaseManager_8h.js  databaseManager_8h_source.html  dir_07fb3f70feeff5b8e773cd82559f7fb5.html  dir_07fb3f70feeff5b8e773cd82559f7fb5.js  dir_27747142951285b09bacafa002e92b5f.html  dir_27747142951285b09bacafa002e92b5f.js  dir_2baeaa2732aa21cecd5a95f915b493c2.html  dir_2baeaa2732aa21cecd5a95f915b493c2.js  dir_63ebc6cb3e47f9bc9ef87222bdad5e2b.html  dir_63ebc6cb3e47f9bc9ef87222bdad5e2b.js  dir_84c0da8561e39febe26b8be7954eed60.html  dir_8c739bbef76d64b22d6b0911c526dd76.html  dir_8c739bbef76d64b22d6b0911c526dd76.js  dir_afc1e89bdcbaba0f1e323dc5f755439c.html  dir_afc1e89bdcbaba0f1e323dc5f755439c.js  (+47 more)
html/search/: all_0.js  all_3.js  all_5.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_6.js  classes_7.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  searchdata.js
latex/: adjacencyList_8cpp.tex  adjacencyList_8h.tex  adjacencyList_8h_source.tex  adjacencyMatrix_8h_source.tex  annotated.tex  backendManager_8h_source.tex  cart_8h_source.tex  classAdjacencyList.tex  classAdjacencyMatrix.tex  classBackendManager.tex  classCart.tex  classDatabaseManager.tex  classDoubleHashTable.tex  classStadium.tex  databaseManager_8h.tex  databaseManager_8h_source.tex  files.tex  hash_8h_source.tex  includes_8h_source.tex  md_README.tex  refman.tex  routes_8cpp.tex  routes_8h_source.tex  stadium_8h_source.tex  structAdjacencyNode.tex  structCompareByCapacity.tex  structCompareByStadiumName.tex  structCompareByTeamName.tex  structCompareByYearOpened.tex  structDistance.tex  structDistanceComparator.tex  structDistanceNode.tex  structPathNode.tex  structSouvenir.tex  structStadiumNode.tex  structStadiumStruct.tex  structedge.tex  structkeyInput.tex
